UI: Fixed login margin, added media query for wrap

--- a/assets/styles/components/_wrap.scss
+++ b/assets/styles/components/_wrap.scss
@@ -1,7 +1,13 @@
 .wrap {
   @include clearfix();
-  max-width: 1200px;
+  max-width: 1000px;
   position: relative;
   margin: auto;
   width: 100%;
+}
+
+@include breakpoint(desktop-wide-only) {
+  .wrap {
+    max-width: 1100px;
+  }
 }
