--- a/assets/styles/pages/session/_login.scss
+++ b/assets/styles/pages/session/_login.scss
@@ -1,7 +1,6 @@
 .login {
   padding-top: 4em;
   text-align: center;
-  margin-bottom: 4em;
 
   .logo {
     width: 120px;
